--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 <meta property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />
 </head>
 <body>
-	123
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+		var js, fjs = d.getElementsByTagName(s)[0];
+		if (d.getElementById(id)) return;
+		js = d.createElement(s); js.id = id;
+		js.src = "//connect.facebook.net/zh_TW/sdk.js#xfbml=1&appId=1477566229145051&version=v2.0";
+		fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));
+	</script>
+	<div class="fb-like" data-href="http://water4516.github.io/WebProject/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
 </body>
 </html>
