--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <meta property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />
 </head>
 <body>
+	<h1>123</h1>
 	<div id="fb-root"></div>
 	<script>(function(d, s, id) {
 		var js, fjs = d.getElementsByTagName(s)[0];
@@ -18,5 +19,6 @@
 		}(document, 'script', 'facebook-jssdk'));
 	</script>
 	<div class="fb-like" data-href="http://water4516.github.io/WebProject/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+	<div class="fb-comments" data-href="http://water4516.github.io/WebProject/" data-numposts="5" data-colorscheme="light"></div>
 </body>
 </html>
